--- a/index.html
+++ b/index.html
@@ -33,24 +33,20 @@
             <div class="row row1">
                 <img class="img-box" src="./image/showcase-photo1.jpg" alt="showcase1">
                 <div class="text-box">
-                    <h2 class="lg-heading text-gray">showcase heading</h2>
-                    <p class="text-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, unde.
-                        Repudiandae eum aliquid
-                        soluta consequatur. Alias maiores earum libero quos dolorum quidem quas quisquam ab doloribus
-                        quibusdam?
+                    <h2 class="md-heading text-gray">showcase heading</h2>
+                    <p class="text-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla soluta nobis rem
+                        dicta commodi aut. Lorem ipsum dolor sit amet. Lorem ipsum
                     </p>
                     <a href="" class="btn btn-secondary ">More</a>
 
                 </div>
             </div>
             <div class="row row2">
-                <img class="img-box" src="./image/showcase-photo2.jpg" alt="showcase1">
+                <img class="img-box" src="./image/showcase-photo2.jpg" alt="showcase2">
                 <div class="text-box">
-                    <h2 class="lg-heading text-black">showcase heading</h2>
-                    <p class="text-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, unde.
-                        Repudiandae eum aliquid
-                        soluta consequatur. Alias maiores earum libero quos dolorum quidem quas quisquam ab doloribus
-                        quibusdam?
+                    <h2 class="md-heading text-black">showcase heading</h2>
+                    <p class="text-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla soluta nobis rem
+                        dicta commodi aut. Lorem ipsum dolor sit amet. Lorem ipsum 
                     </p>
                     <a href="" class="btn btn-secondary ">More</a>
 
